formulario sin css

--- a/FormRecPeli.html
+++ b/FormRecPeli.html
@@ -32,15 +32,15 @@
     <main>
         <center>
         <form action="RecPeliculas" class="FormPel">
-            <label for="txtNombre">Nombre</label>
-            <input type="text" name="txtNombre"><br/>
-            <label for="txtApellido">Apellido</label>
-            <input type="text" name="txtApellido"><br/>
-            <label for="emailCorreo">Correo Electronico</label>
-            <input type="email" name="emailCorreo"><br/>
-            <label for="txtNombrePel">Nombre de la Pelicula</label>
-            <input type="text" name="txtNombrePel"><br/>
-            <label for="SelGenero">Genero</label>
+            <label for="Nombre">Nombre</label>
+            <input type="text" name="txtNombre" id="Nombre"><br/>
+            <label for="Apellido">Apellido</label>
+            <input type="text" name="txtApellido" id="Apellido"><br/>
+            <label for="email">Correo Electronico</label>
+            <input type="email" name="emailCorreo" id="email"><br/>
+            <label for="NombrePel">Nombre de la Pelicula</label>
+            <input type="text" name="txtNombrePel" id="NombrePel"><br/>
+            <label for="Genero">Genero</label>
             <select name="SelGenero" id="Genero">
                 <option value="1">Accion</option>
                 <option value="2">Aventura</option>
@@ -49,10 +49,21 @@
                 <option value="5">Comedia</option>
                 <option value="6">Drama</option>
                 <option value="7">Otro</option>
-            </select>
+            </select><br/>
+            <label for="Director">Director</label>
+            <input type="text" name="txtDirector" id="Director">
+            <input type="submit" name="Enviar"><br/>
         </form>
         </center>
     </main>
+
+    <footer>
+        <center>
+            <div class="Redes_sociales">
+                <h2>hola</h2>
+            </div>
+        </center>
+    </footer>
     
 </body>
 </html>
